<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Geotaggr</string>
    <string name="start_gps_logging">Start logging GPS coordinates</string>
    <string name="gps_logging_frequency">GPS Logging\nFrequency:</string>
    <string name="frequency_in_minutes">Frequency in minutes</string>
    <string name="stop_gps_logging">Stop logging GPS coordinates</string>
    <string name="frequency_prompt">Choose a frequency</string>
    <string-array name="frequencies">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
</resources>
