<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/lay_frequency"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="50dip"
		android:id="@+id/lay_app_name">
		<TextView
			android:textSize="50dip"
			android:layout_alignParentLeft="true"
			android:text="@string/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="30dip"
			android:id="@+id/txt_app_name"></TextView>
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="250dip"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:id="@+id/lay_frequency">
		<TextView
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:text="@string/gps_logging_frequency"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:id="@+id/txt_update_frequency"></TextView>
		<Spinner
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
			android:id="@+id/spi_update_frequency"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:entries="@array/frequencies"
			android:prompt="@string/frequency_prompt"></Spinner>
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/lay_frequency"
		android:layout_marginTop="30dip"
		android:id="@+id/lay_buttons">
		<Button
			android:text="@string/start_gps_logging"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/btn_start_logging"></Button>
		<Button
			android:layout_below="@+id/btn_start_logging"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/btn_start_logging"
			android:layout_alignRight="@+id/btn_start_logging"
			android:id="@+id/btn_stop_logging"
			android:text="@string/stop_gps_logging"></Button>
	</RelativeLayout>
</RelativeLayout>
